# hrp2_bike

./: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
ergocycle_modelisation/: simulationErgocycle.sh  simulationErgocycle.xml
ergocycle_modelisation/ergocycle_dimention/: ergocycle_main.wrl  ergocycle_saddle.wrl  simulationErgocycle.xml
ergocycle_modelisation/script/: ergocycle_dimension.py
launch/: CMakeLists.txt  CMakeLists.txt~  hrp2_bike.launch  hrp2_bike_gdb.launch  openhrp3_hrp2_bike_nobush.launch  openhrp3_hrp2_bike_nobush.launch.in  openhrp3_hrp2_bike_nobush.launch.in~
lib/: libhrp2-bike.so.UNKNOWN-dirty
project/: simulationHrp2BikeNoBush.xml  simulationHrp2BikeNoBush.xml~
rviz_cfg/: hrp2_bike.rviz
scripts/: Input_from_user.py  appli.py  cycling.py  hrp2_bike.py  launcher
src/: CMakeLists.txt  CMakeLists.txt~  pedal_trajectory.cpp  pedal_trajectory.cpp~  pedal_trajectory.hh  pedal_trajectory.hh~
